<resources>
    <string name="app_name">Daily Football</string>
    <string name="home">Home</string>
    <string name="competitions">Competitions</string>
    <string name="card_title_news">News</string>
    <string name="card_title_competitions">Competitions</string>
    <string name="choose_competition">Choose Competition</string>
	<string name="headlines">Headlines</string>
	<string name="argument_news_id">newsId</string>
	<string name="argument_news_source">newsSource</string>
	<string name="read_more">Read More</string>
	<string name="fixtures">Fixtures</string>
	<string name="teams">Teams</string>
	<string name="standings">Standings</string>
	<string name="results">Results</string>
	<string name="news">News</string>
</resources>
