<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/action_news">
	
	<!-- news fragment -->
	<fragment
			android:id="@+id/action_news"
			android:name="com.android.mayojava.dailyfootball.news.NewsHostFragment"
			android:label="@string/headlines"
			tools:layout="@layout/fragment_news_host">
		
		<action android:id="@+id/to_news_details"
		        app:destination="@id/news_details"
		        app:popExitAnim="@anim/slide_out_right"
		        app:popEnterAnim="@anim/slide_in_left"
		        app:enterAnim="@anim/slide_in_right"
		        app:exitAnim="@anim/slide_out_left"/>
	
	</fragment>
	
	<fragment android:id="@+id/action_fixtures"
	          android:name="com.android.mayojava.dailyfootball.fixtures.FixturesFragment"
	          android:label="@string/fixtures"
	          tools:layout="@layout/fixtures_fragment"/>
	
	<fragment android:id="@+id/action_results"
	          android:name="com.android.mayojava.dailyfootball.results.ResultsFragment"
	          android:label="@string/results"
	          tools:layout="@layout/dummy_fragment"/>
	
	<fragment android:id="@+id/action_standings"
	          android:name="com.android.mayojava.dailyfootball.standings.StandingsFragment"
	          android:label="@string/standings"
	          tools:layout="@layout/dummy_fragment"/>
	
	<fragment android:id="@+id/teams"
	          android:name="com.android.mayojava.dailyfootball.teams.TeamFragment"
	          android:label="@string/teams"
	          tools:layout="@layout/dummy_fragment"/>
	
	<!-- news details fragment -->
	<fragment
			android:id="@+id/news_details"
			android:name="com.android.mayojava.dailyfootball.newsdetails.NewsDetailsFragment"
			tools:layout="@layout/news_details_fragment">
		
		<argument android:name="@string/argument_news_id"
		          app:argType="integer" />
		<argument android:name="@string/argument_news_source"
		          app:argType="string"/>
	</fragment>
</navigation>
